Bug 462778 - Touchscreen: cannot activate the selection mode with long press on a selected file/folder
Summary: Touchscreen: cannot activate the selection mode with long press on a selected...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: Selection Mode (other bugs)
Version First Reported In: 22.12.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-08 11:23 UTC by Patrick Silva
Modified: 2023-08-05 03:58 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-12-08 11:23:36 UTC
STEPS TO REPRODUCE
1. use a device with touchscreen
2. open Dolphin
3. select a file/folder
4. long press on the selected file/folder

OBSERVED RESULT
an animation occurs and nothing else

EXPECTED RESULT
the selection mode is activated, so we can use the options from the context menu - copy, cut, rename, etc

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Graphics Platform: Wayland
Comment 1 Felix Ernst 2022-12-08 13:51:26 UTC
That's unfortunate. Marco, would you please take a look at this? Seems like this case was missed in https://invent.kde.org/system/dolphin/-/commit/71ea4a88d890949500d05aa21839ad93ec6bdb1d.
Comment 2 Nate Graham 2023-01-03 20:35:27 UTC
Hmm, this is working for me (Wayland, git master, Fedora 37).
Comment 3 Bug Janitor Service 2023-05-24 14:58:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/552
Comment 4 Bug Janitor Service 2023-07-07 14:39:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/567
Comment 5 Felix Ernst 2023-08-01 10:10:31 UTC
Git commit 89dcef3af497fb43ce612df45b1aa968a6a2ccb0 by Felix Ernst, on behalf of Steffen Hartleib.
Committed on 01/08/2023 at 12:10.
Pushed by felixernst into branch 'master'.

Enter selection mode by tap-and-holding an already selected item

Allow entering selection mode by touching an already selected item.

M  +6    -4    src/kitemviews/kitemlistcontroller.cpp

https://invent.kde.org/system/dolphin/-/commit/89dcef3af497fb43ce612df45b1aa968a6a2ccb0