Enter selection mode by tap-and-holding an already selected item

Allow entering selection mode by touching an already selected item.

BUG: 462778